--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
       name="description"
       content="developer portfolio"
     />
-    <meta name="keyword" content="portfolio, javascript, developer, frontend, react, dev, front-end, tech, programmer">
-    <title>Developer Portfolio</title>
+    <meta name="keyword" content="portfolio, javascript, developer, frontend, react, dev, front-end, tech, programmer, TheWakar, Wakar">
+    <title>TheWakar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
